--- a/xiaowei-scool/task4/style.css
+++ b/xiaowei-scool/task4/style.css
@@ -5,4 +5,40 @@
 
 .container{
 	padding:20px;
+	display: flex;
+	border:1px solid #eee;
+	justify-content: space-around;
+	align-items: center;
 }
+.item1{
+	width:150px;
+	height:120px;
+	border:1px solid #f00;
+}
+.item2{
+	width:150px;
+	height:100px;
+	border:1px solid #f00;
+}
+.item3{
+	width:150px;
+	height:40px;
+	border:1px solid #f00;
+}
+.item4{
+	width:150px;
+	height:200px;
+	border:1px solid #0f0;
+}
+
+@media screen and (max-width: 640px){
+	.container{
+		flex-wrap: wrap;
+		align-items: flex-start;
+		
+	}
+	.item4{
+		order:-1;
+	}
+}
+
