--- a/xiaowei-scool/task4/style.css
+++ b/xiaowei-scool/task4/style.css
@@ -7,7 +7,7 @@
 	padding:20px;
 	display: flex;
 	border:1px solid #eee;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-items: center;
 }
 .item1{
@@ -35,7 +35,7 @@
 	.container{
 		flex-wrap: wrap;
 		align-items: flex-start;
-		
+
 	}
 	.item4{
 		order:-1;
